--- a/netflix-clone/src/Componenets/Banner/banner.css
+++ b/netflix-clone/src/Componenets/Banner/banner.css
@@ -1,7 +1,7 @@
 .banner {
-  margin-top: -10vh;
-  height: 80vh;
-  margin-bottom: -80px;
+  margin-top: 0;
+  height: 75vh;
+  margin-bottom: 0;
   color: white;
   object-fit: contain;
 }
@@ -11,39 +11,42 @@
   /* height: 190px; */
 }
 .banner_title {
-  font-size: 3rem;
-  font-weight: 800;
+  font-size: 1.5rem;
+  font-weight: 300;
   padding-bottom: 0.3rem;
 }
 .banner_description {
   width: 45rem;
   line-height: 1;
-  padding: 1rem 0;
+  padding: 0rem;
   font-size: 1rem;
-  max-width: 360px;
-  height: 80px;
+  max-width: 75px;
+  height: 75px;
+  color: darkorange;
 }
 .banner_button {
   cursor: pointer;
-  color: #fff;
+  color: darkcyan;
   outline: none;
   font-size: 1.2rem;
   font-weight: 700;
   border-radius: 0.2vw;
-  padding: 1rem 3rem;
-  margin-right: 2rem;
+  padding: 0.3rem 1rem;
+  margin-right: 3rem;
   background-color: rgba(51, 51, 51, 0.5);
 }
 .play {
-  color: #000;
-  background-color: #fff;
+  color: darkcyan;
+  background-color: rgba(51, 51, 51,);
 }
 .banner_button:hover {
   color: #000;
   background-color: #c6c6c6;
-  transition: all0.2s;
+  transition: all 0.2s;
 }
 .banner_fadeBottom {
-  height: 40vh;
+  position: absolute;
+  bottom: 0;
+  width: 90%;
   background-image: linear-gradient(180deg, transparent, rgb(37, 37, 37, 0.91),#111);
 }
