--- a/netflix-clone/src/Componenets/Rows/Row/row.css
+++ b/netflix-clone/src/Componenets/Rows/Row/row.css
@@ -26,6 +26,6 @@
 .row {
     margin-top: 5px;
     margin-left: 10px;
-    color: #003366;
-    background-color:rgb(130, 92, 35);
+    color: chartreuse;
+    background-color: rgb(37, 33, 33);
 }
